Refactor basket service